--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="//cdn.jsdelivr.net/npm/phaser@3.3.0/dist/phaser.min.js"></script>
+  <script src="./app.js"></script>
 </head>
-<body>
+<body style="margin: 0;">
 
 </body>
 </html>
