--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <li>Home Tool Markup Language</li>
           </ul>
         </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close (DEBUG)</button>
+        </div>
       </div>
     </div>
   </div>
