Implements the quiz

--- a/index.html
+++ b/index.html
@@ -19,12 +19,9 @@
           <h4 class="modal-title">Test n°1</h4>
         </div>
         <div class="modal-body">
-          <p id="question">What does HTML stand for?</p>
+          <p id="question"></p>
           <ul id="answers">
           </ul>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close (DEBUG)</button>
         </div>
       </div>
     </div>
