--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title">Test n°1</h4>
+          <h4 class="modal-title">Question</h4>
         </div>
         <div class="modal-body">
           <p id="question"></p>
